# deadbolt

./: .gitignore  ARCHITECTURE.md  PARITY.md  README.md  deadbolt.sh  flutter_rust_bridge.yaml  pubspec.yaml  spec.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
DeadboltWallet/: Package.swift
assets/: tokens.json
bridge/: .env.example  Dockerfile  pyproject.toml
bridge/bridge/: __init__.py  auth.py  config.py  main.py  protocol.py  routes.py  ws_client.py
bridge/deploy/: deadbolt-bridge.service
calypso/: calypso.js  generate_test_vectors.js  hermes.js  hermesSpl.js  hw_signer.js  package-lock.json  (+3 more)
rust/deadbolt_core/: Cargo.toml
rust/deadbolt_core/src/: lib.rs
rust/deadbolt_core/src/agent/: auth.rs  guardrails.rs  intent.rs  mod.rs  server.rs
rust/deadbolt_core/src/auth/: lock_state.rs  mod.rs  password.rs
rust/deadbolt_core/src/crypto/: base58.rs  mnemonic.rs  mod.rs  pubkey.rs  signer.rs  vault.rs
rust/deadbolt_core/src/hardware/: esp32_bridge.rs  esp32_detector.rs  esp32_signer.rs  mod.rs
rust/deadbolt_core/src/models/: config.rs  error.rs  mod.rs  wallet.rs  wallet_manager.rs
rust/deadbolt_core/src/solana/: address_lookup_table.rs  builder.rs  compact_u16.rs  instruction.rs  message.rs  mod.rs  pda.rs  transaction.rs  versioned_message.rs
rust/deadbolt_core/src/solana/programs/: compute_budget.rs  jito_tip.rs  mod.rs  system_program.rs  token_program.rs
rust/deadbolt_core/src/storage/: dpapi.rs  keychain.rs  memory.rs  migration.rs  mod.rs  secret_service.rs  session.rs
rust/deadbolt_core/tests/: compat_tests.rs
(+268 files in other folders)
