[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deadbolt-bridge"
version = "0.1.0"
description = "External bridge service for Deadbolt agentic DeFi wallet"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
]

[project.scripts]
deadbolt-bridge = "bridge.main:cli"

[tool.setuptools.packages.find]
include = ["bridge*"]
