[package]
name = "deadbolt_core"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
bip39 = "2"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
getrandom = "0.2"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chacha20poly1305 = "0.10"
scrypt = "0.11"
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"
serialport = "4"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
constant_time_eq = "0.3"

# macOS Keychain
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

# Linux secret-service
[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "4", features = ["crypto-rust"] }

[dev-dependencies]
